--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="./img/icon.png" />
   <meta name="description"
     content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora amet eligendi temporibus laboriosam doloribus ipsam debitis minus! Quisquam, ab nostrum? Ex molestias corporis quo aspernatur magnam harum ipsam porro quidem.." />
-    <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -34,15 +34,6 @@
     <div class="shopping-cart">
       <h2 class="cart-title">Your Cart</h2>
       <div class="cart-content">
-        <div class="cart-box">
-          <img src="./img/sushi.png" alt="" class="cart-img">
-          <div class="detail-box">
-            <div class="cart-product-title">SUSHI</div>
-            <div class="cart-price">$25</div>
-            <input type="number" value="1" class="cart-quantity">
-          </div>
-          <i class="bi bi-trash cart-remove"></i>
-        </div>
       </div>
       <div class="total">
         <div class="total-title">Total</div>
@@ -76,99 +67,99 @@
     </div>
     <div class="food-card">
       <div class="card sousi">
-        <img src="./img/sushi.png" alt="">
+        <img src="./img/sushi.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SASHIMI SAUMON</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$10.50</h4>
         </div>
       </div>
       <div class="card sousi">
-        <img src="./img/sushi.png" alt="">
+        <img src="./img/sushi.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SUSHI ANGUILLE </h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$10.50</h4>
         </div>
       </div>
       <div class="card sousi">
-        <img src="./img/sushi.png" alt="">
+        <img src="./img/sushi.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">NIGIRI MORIAWASE</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$10.50</h4>
         </div>
       </div>
       <div class="card chalada">
-        <img src="./img/suchi salad .png" alt="">
+        <img src="./img/suchi salad .png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SALADE VEGGIE</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$6</h4>
         </div>
       </div>
       <div class="card chalada">
-        <img src="./img/suchi salad .png" alt="">
+        <img src="./img/suchi salad .png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">CHOU CAROTTE</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$5.50</h4>
         </div>
       </div>
       <div class="card chalada">
-        <img src="./img/suchi salad .png" alt="">
+        <img src="./img/suchi salad .png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SALADE VIET</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$3.50</h4>
         </div>
       </div>
       <div class="card souba">
-        <img src="./img/sushi-soup.png" alt="">
+        <img src="./img/sushi-soup.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SOUPE MISO</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$10</h4>
         </div>
       </div>
       <div class="card souba">
-        <img src="./img/sushi-soup.png" alt="">
+        <img src="./img/sushi-soup.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SOUPE AUX FRUITS DE MER</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$4.90</h4>
         </div>
       </div>
       <div class="card souba">
-        <img src="./img/sushi-soup.png" alt="">
+        <img src="./img/sushi-soup.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">SOUPE POULET</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$5</h4>
         </div>
       </div>
       <div class="card lasir">
-        <img src="./img/drinks.png" alt="">
+        <img src="./img/drinks.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">LIPTON ICE TEA CITRON</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$3.50</h4>
         </div>
       </div>
       <div class="card lasir">
-        <img src="./img/drinks.png" alt="">
+        <img src="./img/drinks.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">7 UP</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$1.9</h4>
         </div>
       </div>
       <div class="card lasir">
-        <img src="./img/drinks.png" alt="">
+        <img src="./img/drinks.png" alt="" class="product-img">
         <div class="card-info">
-          <h4>NIGIRI MORIAWASE</h4>
-          <button><img src="./img/cart-plus.svg" alt=""></button>
-          <h4>$10.50</h4>
+          <h4 class="product-title">PEPSI FRAMBOISE</h4>
+          <button class="add-cart"><img src="./img/cart-plus.svg" alt=""></button>
+          <h4 class="price">$2</h4>
         </div>
       </div>
 
